--- a/Back-Node/index.html
+++ b/Back-Node/index.html
@@ -22,7 +22,8 @@
                 margin: 0;
                 font-family: 'Poppins', sans-serif;
                 font-size: 20px;
-                background: #ff6060;
+                /* background: #ff6060; */
+                background: #108d6f;
             }
 
             .container{
